# eva

./: .clang-format  .gitignore  .travis.yml  LICENSE  Makefile  README.md  instructions.md  meson.build  meson_options.txt
src/: disassemble.c  disassemble.h  eva.h  meson.build  vm.c
src/asm/: README.md  build.sh  meson.build
src/asm/src/: .merlin  Instructions.ml  Instructions_processing.ml  dune  main.ml  test.evasm
src/asm/src/parser/: dune  lexer.mll  parser.mll  parser.mly
test/: meson.build  test.c  test.h
whitepaper/: .gitignore  eva_en.tex  eva_fr.brf  eva_fr.fdb_latexmk  eva_fr.fls  eva_fr.lyx  eva_fr.tex  refs.tex  style.sty
